--- a/src/css/custom.slider.css
+++ b/src/css/custom.slider.css
@@ -102,3 +102,16 @@
     height: auto;
   }
   
+
+
+
+  /* custom.slider.css */
+
+
+@media (max-width: 600px) {
+  .container__slider img {
+     /* switch to vertical layout on small screens */
+     width: 100%;
+    height: 100%;
+  }
+}
